--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
         <div class="news-wrapper">
           <div id="news">
             <h3>News</h3>
-            <p>営業再開しました！</p>
+            <div>
+              <p>営業再開しました！</p>
+              <p>営業再開しました！</p>
+              <p>営業再開しました！</p>
+              <p>営業再開しました！</p>
+              <p>営業再開しました！</p>
+            </div>
           </div>
         </div>
 
