--- a/takeout.html
+++ b/takeout.html
@@ -45,6 +45,14 @@
             </form>
           </div>
 
+          <div id="maskZoom" class="hidden"></div>
+
+          <div id="modalZoom" class="hidden">
+            <p id="pZoom"></p>
+            <img id="imageZoom" >
+            <p id="closeZoom">close</p>
+          </div>
+
           <div id="container">
             <form>
               <div id="items"></div>
